--- a/WesterosWhiz/Main.storyboard
+++ b/WesterosWhiz/Main.storyboard
@@ -153,6 +153,9 @@
                     <navigationItem key="navigationItem" id="8aP-dS-0T2"/>
                     <connections>
                         <outlet property="QuestionLabel" destination="adG-UC-i84" id="dhG-nC-y1F"/>
+                        <outlet property="btn1" destination="O7z-Oa-1A0" id="IfH-33-tOk"/>
+                        <outlet property="btn2" destination="TOz-H8-QyH" id="xAa-Ji-J7R"/>
+                        <outlet property="btn3" destination="b1k-mV-v7l" id="FMX-vK-A4Z"/>
                         <segue destination="Acv-ZA-gH9" kind="show" identifier="scoreLabel" id="ZFO-n5-QgB"/>
                     </connections>
                 </viewController>
@@ -180,10 +183,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsn-tL-ae4">
-                                <rect key="frame" x="152" y="404" width="71" height="30"/>
+                                <rect key="frame" x="148" y="404" width="79" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Play Again">
+                                <state key="normal" title=" Play Again ">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -204,6 +207,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="playAgain" destination="vsn-tL-ae4" id="klw-Eo-Dgg"/>
                         <outlet property="scoreLabel" destination="3CA-LN-OsA" id="Z5O-Md-OAC"/>
                     </connections>
                 </viewController>
